scripts/nullaway/wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8.txt
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightClient.java:15: error: [NullAway] dereferenced expression character is @Nullable
            character.printCharacter();
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/abstractFactory/AbstractFactoryClient.java:12: error: [NullAway] dereferenced expression af is @Nullable
        AbstractProductA product = af.createProductA();
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/ChocolatePieBuilder.java:8: error: [NullAway] dereferenced expression getPie() is @Nullable
        getPie().setDough("4 eggs + 70g of sugar + 2 spoons of flour + 2 spoons of starch + pinch of salt + 2 bags of vanilla + 2g of baking powder");
                ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/ChocolatePieBuilder.java:13: error: [NullAway] dereferenced expression getPie() is @Nullable
        getPie().setFilling("chocolate chips + cocoa powder");
                ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:24: error: [NullAway] dereferenced expression pie.getDough() is @Nullable
        if (pie.getDough().isEmpty()) {
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:28: error: [NullAway] dereferenced expression pie.getFilling() is @Nullable
        if (pie.getFilling().isEmpty()) {
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/BuilderClient.java:20: error: [NullAway] dereferenced expression chocoPie is @Nullable
            addOutput("pie dough: " + chocoPie.getDough());
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/BuilderClient.java:26: error: [NullAway] dereferenced expression applePie is @Nullable
            addOutput("pie dough: " + applePie.getDough());
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/ApplePieBuilder.java:8: error: [NullAway] dereferenced expression getPie() is @Nullable
        getPie().setDough("150g of sugar + 200g of butter + 5 eggs + 8g of baking powder + 650g of flour");
                ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/ApplePieBuilder.java:13: error: [NullAway] dereferenced expression getPie() is @Nullable
        getPie().setFilling("apple slices");
                ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/command/CommandCenter.java:13: error: [NullAway] dereferenced expression command is @Nullable
        command.execute();
               ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Memento.java:10: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.state = state;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Originator.java:25: error: [NullAway] dereferenced expression memento is @Nullable
        this.state = memento.getState();
                            ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
13 errors
